sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/LambdaExpression.sand
pub class LambdaExpression {
    foo() {
        [
            \ -> x(),
            \a -> x(),
            \a, b -> x(),
            \a, b, c -> x(),

            \ -> {
                x();
            },
            \a -> {
                x();
            },
            \a -> {
                x();
                x
            },
            \a, b, c -> {
                x();
                x
            },
            \a, b, c -> {
                x();
                if cond {
                    x();
                    x
                } else {
                    x
                }
            },
        ]
    }
}