sandc/test/fixtures/astRegression/shouldFail/productions/lambdaExpression/ParamListTrailingComma.sand
pub class ParamListTrailingComma {
    foo() {
        \a, b, -> c
    }
}